--- a/index.html
+++ b/index.html
@@ -3,10 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>First web page practise</title>
+    <title>Assignment-1</title>
 </head>
 <body>
-    this is my first web page
+ <p>My name is Sakshi Bhardwaj.I live in Firozabad.I am B.tech third year student and I am studying in GLA 
+    University.I complete my school education from St.johns Sr.Sec.School firozabad.Currently I
+    am studying Full Stack in my syallbus and i am very glad that i am learning to create 
+    and design web pages.Soon I will start my project on web development and will learn all
+    the concept that will help me to design web pages.</p>
     
 </body>
 </html>
