--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Assignment-1</title>
 </head>
 <body>
+<h1>Welcome to my Web page</h1>
+<h2>About Me</h2>
  <p>My name is Sakshi Bhardwaj.I live in Firozabad.I am B.tech third year student and I am studying in GLA 
     University.I complete my school education from St.johns Sr.Sec.School firozabad.Currently I
     am studying Full Stack in my syallbus and i am very glad that i am learning to create 
