adding background colour

--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment-1</title>
 </head>
-<body>
-<h1>Welcome to my Web page</h1>
+<body BGCOLOR="BLUE">
+ <FONT COLOR="RED">
+     <h1>Welcome to my live Web page</h1>
+ </FONT>
 <h2>About Me</h2>
  <p>My name is Sakshi Bhardwaj.I live in Firozabad.I am B.tech third year student and I am studying in GLA 
     University.I complete my school education from St.johns Sr.Sec.School firozabad.Currently I
