--- a/index.html
+++ b/index.html
@@ -6,15 +6,13 @@
     <title>Assignment-1</title>
 </head>
 <body BGCOLOR="BLUE">
- <FONT COLOR="RED">
      <h1>Welcome to my live Web page</h1>
- </FONT>
 <h2>About Me</h2>
  <p>My name is Sakshi Bhardwaj.I live in Firozabad.I am B.tech third year student and I am studying in GLA 
     University.I complete my school education from St.johns Sr.Sec.School firozabad.Currently I
     am studying Full Stack in my syallbus and i am very glad that i am learning to create 
     and design web pages.Soon I will start my project on web development and will learn all
-    the concept that will help me to design web pages.</p>
+    the concept that will help me to design web pages. this is my introduction.</p>
     
 </body>
 </html>
