--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     am studying Full Stack in my syallbus and i am very glad that i am learning to create 
     and design web pages.Soon I will start my project on web development and will learn all
     the concept that will help me to design web pages. this is my introduction.</p>
+    <a href="Practical-3.html">Practical 3</a>
     
 </body>
 </html>
