--- a/Practical-3.html
+++ b/Practical-3.html
@@ -6,16 +6,40 @@
     <title>Practical 3</title>
 </head>
 <body>
-    <h2><font color="red">Practical-3: Create a web page showing a basic html structure using character 
-        Entities and span Tag.
-        
-    </font></h2>
+    <h2><span style="color:red;">Practical-3: Create a web page showing a basic HTML structure using 
+    Character Entities and span Tag.</span></h2>
+    <h1>Output</h1>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;!DOCTYPE&nbsp;&nbsp;<span style="color:red;">hrml</span>&gt;
     <br>
-    <h1 ALIGN="left">Output</h1>
-    <p>
-        <!DOCTYPE <Font color="red"> html</font>></p>
-    </p>
-    
-
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;html&nbsp;&nbsp;<span style="color:red;">lang</span>=
+    <span style="color:blue;">"en"&nbsp;</span>&gt;<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&lt;head&gt;<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &lt;meta&nbsp;&nbsp;<span style="color:red;">charset</span>=<span style="color:blue;">"UTF-8"</span>
+    &gt;<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &lt;meta&nbsp;&nbsp;<span style="color:red;">name</span>=<span style="color:blue;">""viewport</span>
+    &nbsp;&nbsp;<span style="color:red;">content</span>=<span style="color:blue;">"width=device-width,initial scale=1.0"
+    </span>&gt;<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &lt;title&gt;Document&lt;/title&gt;<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &lt;/head&gt;
+    <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &lt;body&gt;
+    <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    <span style="color:light green;">&lt!--this is html comment--&gt;</span><br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Write
+    your content here.
+    <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &lt;/body&gt;<br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+    &lt;/html&gt;<br>
 </body>
 </html>
