--- a/Practical-3.html
+++ b/Practical-3.html
@@ -35,8 +35,7 @@
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     <span style="color:light green;">&lt!--this is html comment--&gt;</span><br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Write
-    your content here.
-    <br>
+    your content here.....<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
     &lt;/body&gt;<br>
     &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
