--- a/index.html
+++ b/index.html
@@ -3,17 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment-1</title>
+    <title>Practical-4</title>
 </head>
-<body BGCOLOR="BLUE">
-     <h1>Welcome to my live Web page</h1>
-<h2>About Me</h2>
- <p>My name is Sakshi Bhardwaj.I live in Firozabad.I am B.tech third year student and I am studying in GLA 
-    University.I complete my school education from St.johns Sr.Sec.School firozabad.Currently I
-    am studying Full Stack in my syallbus and i am very glad that i am learning to create 
-    and design web pages.Soon I will start my project on web development and will learn all
-    the concept that will help me to design web pages. this is my introduction.</p>
-    <a href="Practical-3.html">Practical 3</a>
+<body style="background-color:lightcoral;">
+    <h2><span style="color:red;">Practical-4:Create a website having list of all 
+    practical and their individual practical page </span></h2><br>
+    <h1 style="color:green;">Welcome to Fullstack Course</h1><br>
+    <b><h2>About Course</h2></b>
+    <p>Front-end web development is everything involved in programming the user interface of a web application.
+        Typically it refers to the Hypertext Markup Language(HTML).Cascading Style Sheets(CSS) and JAvascript portion
+        of website production as opposed to the database or server-side programming.It encompasses everything from building
+        a simple page of HTML text to creating complex,responsive HTML5 websites.
+    </p> <br>
+    <h1 style="color:green;">List of Practicals</h1><br>
+    1.Create a web page including HTML basic skeleton using offline HTML Editor and Online Sandbox
+    Environment<a href="practical-1.html">Practical 1</a><br><br>
+    2.Live your first-web pageon Git-Hub 
+    <a href="Practical-2.hrml">Practical 2</a><br><br>
+    3.Create a web page showing a basic html structure using character entities and span tag
+    <a href=Practical-3.html>Practical 3</a><br><br>
+    4.Create a website having list of all practical and their individual practical page links
+    <a href="Pracical-4.html">Practical 4</a>
     
 </body>
 </html>
