--- a/Practical1.html
+++ b/Practical1.html
@@ -6,6 +6,17 @@
     <title>Practical 1</title>
 </head>
 <body>
-    this is your new web page hi everyone.
+    <h2><span style="color:red;">Create a web page including HTML basic skeleton using offline HTML Editor
+        and Online Sandbox
+       Environment</span></h2>
+       <h1>Welcome to Fullstack Course</h1>
+       <b><h2>About Course</h2></b>
+       <p>Front-end web development is everything involved in programming the user interface of a web application.
+           Typically it refers to the Hypertext Markup Language(HTML).Cascading Style Sheets(CSS) and JAvascript portion
+           of website production as opposed to the database or server-side programming.It encompasses everything from building
+           a simple page of HTML text to creating complex,responsive HTML5 websites.
+       </p> <br>
+      <b><h2>Output</h2></b>   
+
 </body>
 </html>
