--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     1.Create a web page including HTML basic skeleton using offline HTML Editor and Online Sandbox
     Environment<a href="Practical1.html">Practical 1</a><br><br>
     2.Live your first web-page on <Git-Hub>
-        <a href="Practical2.html">Practical 2</a>
+        <a href="Practical2.html">Practical 2</a><br><br>
     3.Create a web page showing a basic html structure using character entities and span tag
     <a href=Practical-3.html>Practical 3</a><br><br>
     4.Create a website having list of all practical and their individual practical page links
