--- a/Practical4.html
+++ b/Practical4.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pracical 4</title>
+    <title>Document</title>
 </head>
 <body style="background-color:lightcoral;">
     <h2><span style="color:red;">Practical-4:Create a website having list of all 
@@ -24,7 +24,7 @@
         3.Create a web page showing a basic html structure using character entities and span tag
         <a href=Practical-3.html>Practical 3</a><br><br>
         4.Create a website having list of all practical and their individual practical page links
-        <a href="Practicalal-4.html">Practical 4</a>
+        <a href="Practical4.html">Practical 4</a>
     
 </body>
 </html>
