--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     3.Create a web page showing a basic html structure using character entities and span tag
     <a href=Practical-3.html>Practical 3</a><br><br>
     4.Create a website having list of all practical and their individual practical page links
-    <a href="practical4.html">Practical 4</a>
+    <a href="practical4.html">Practical 4</a><br>
     
 </body>
 </html>
