--- a/Practical2.html
+++ b/Practical2.html
@@ -9,10 +9,11 @@
     <h2><span style="color:red;">Live your first-web pageon Git-Hub </span></h2>
     <h1>Welcome to Fullstack Course</h1>
         <b><h2>About Course</h2></b>
-        <p>Front-end web development is everything involved in programming the user interface of a web application.
+        <p><font size="10">Front-end web development is everything involved in programming the user interface of a web application.
             Typically it refers to the Hypertext Markup Language(HTML).Cascading Style Sheets(CSS) and JAvascript portion
             of website production as opposed to the database or server-side programming.It encompasses everything from building
-            a simple page of HTML text to creating complex,responsive HTML5 websites.
+            a simple page of HTML text to creating complex,responsive HTML5 websites designed to be accessed
+            via various different browsers,device and screen sizes.</font>
         </p> <br>
        <b><h2>Output</h2></b>    
     
