--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practical-4</title>
+    <title>Introduction to git and github</title>
 </head>
 <body style="background-color:lightcoral;">
     <h2><span style="color:red;">Practical-4:Create a website having list of all 
