add image in code

--- a/Practical1.html
+++ b/Practical1.html
@@ -16,7 +16,8 @@
            of website production as opposed to the database or server-side programming.It encompasses everything from building
            a simple page of HTML text to creating complex,responsive HTML5 websites.
        </p> <br>
-      <b><h2>Output</h2></b> 
+      <b><h2>Output</h2></b>
+      <IMG SRC="online code.png"> 
       <br>  
 
 </body>
