--- a/Practical1.html
+++ b/Practical1.html
@@ -17,7 +17,7 @@
            a simple page of HTML text to creating complex,responsive HTML5 websites.
        </p> <br>
       <b><h2>Output</h2></b>
-      <IMG SRC="online code.png"> 
+      <IMG SRC="image/online code.png"> 
       <br>  
       <br>
 
