--- a/Practical1.html
+++ b/Practical1.html
@@ -17,10 +17,10 @@
            a simple page of HTML text to creating complex,responsive HTML5 websites.
        </p> <br>
       <b><h2>Output</h2></b>
-      <IMG SRC="image/online code.png" height=50% width=50%> 
+      <IMG SRC="image/online code.png" ALIGN="center" height=50% width=50%> 
       <br>  
       <br>
-      <br>
+      
       
 
 </body>
