--- a/Practical2.html
+++ b/Practical2.html
@@ -16,8 +16,7 @@
             via various different browsers,device and screen sizes.</font>
         </p> <br>
        <b><h2>Output</h2></b>    
-       <br>
-       <br>
+       <IMG SRC="image/live github.png" style="width:80%; display:block; margin-left:auto; margin-right:auto; "> 
     
 </body>
 </html>
