--- a/Practical2.html
+++ b/Practical2.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practical 2</title>
 </head>
 <body>
     <h2><span style="color:red;">Live your first-web pageon Git-Hub </span></h2>
