--- a/IntroOfCss.html
+++ b/IntroOfCss.html
@@ -7,5 +7,13 @@
 </head>
 <body>
     
+        <p>
+            Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language like HTML. 
+            CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.CSS stands for Cascading Style Sheets.
+             CSS describes how HTML elements are to be displayed on screen, paper, or in other media.
+              CSS saves a lot of work. It can control the layout of multiple web pages all at once. 
+              External stylesheets are stored in CSS files.
+        </p>
+    
 </body>
 </html>
