--- a/IntroOfCss.html
+++ b/IntroOfCss.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <Img src="image/css image.png" style="width: 80%; display: block; margin-left: auto; margin-right: auto;">
         <p>
             Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language like HTML. 
             CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.CSS stands for Cascading Style Sheets.
