--- a/Introhtml.html
+++ b/Introhtml.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img src="image/HTML image.png" style="width:40%; display:block; margin-left:auto; margin-right:auto;">
         <p>HTML stands for Hyper Text Markup Language.HTML is a complete code package that allows the user to
             create web pages.It include text and graphics.Using HTML,we can add links to the web pages.
             HTML is the most commonly used languages to write the web pages.It has gained popularity due to
