--- a/practical5.html
+++ b/practical5.html
@@ -11,7 +11,7 @@
     <map id="map1" name="map1">
         <area href="Introhtml.html" shape="rect" coords="20,10,171,166"  alt="Introduction To HTML"/>
         <area href="IntroOfCss.html" shape="circle" coords="288,99,100" alt="Introduction to CSS"/>
-        <area href="introjss.html" shape="rect" coords="27,198,170,339" alt="Introduction to Java Script"/>
+        <area href="IntroOfJs.html" shape="rect" coords="27,198,170,339" alt="Introduction to Java Script"/>
         <area href="introbootstrap.html" shape="poly" coords="289,204,232,224,240,301,289,329,338,299,346,223"
         alt="Introduction To Bootstrap"/>
         
