--- a/IntroOfJs.html
+++ b/IntroOfJs.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
+    <IMG SRC="image/js image.png" style="width:40%; display: block; margin-left: auto; margin-right: auto;">
+        
     
 </body>
 </html>
