--- a/IntroOfJs.html
+++ b/IntroOfJs.html
@@ -7,6 +7,14 @@
 </head>
 <body>
     <IMG SRC="image/js image.png" style="width:40%; display: block; margin-left: auto; margin-right: auto;">
+        <p>
+            JavaScript is a dynamic computer programming language. 
+            It is lightweight and most commonly used as a part of web pages, whose implementations allow client-side script to interact with the user and make dynamic pages. 
+            It is an interpreted programming language with object-oriented capabilities.
+            JavaScript, often abbreviated as JS, is a programming language that conforms to the ECMAScript specification.
+             JavaScript is high-level, often just-in-time compiled, and multi-paradigm. It has curly-bracket syntax, dynamic typing,
+             prototype-based object-orientation, and first-class functions.
+        </p>
         
     
 </body>
