--- a/IntroToBootstrap.html
+++ b/IntroToBootstrap.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
+    <img src="image/bootstrap 5.jpg" style="width: 40%; display: block; margin-left: auto; margin-right: auto;">
+    <p>
+        Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.
+         It contains CSS- and JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components.
+         What is Bootstrap? Bootstrap is a potent front-end framework used to create modern websites and web apps.
+          It's open-source and free to use, yet features numerous HTML and CSS templates for UI interface elements such as buttons and forms. Bootstrap also supports JavaScript extensions.
+    </p>
     
 </body>
 </html>
