--- a/practical5.html
+++ b/practical5.html
@@ -3,7 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Practical 5</title>
+    <style>
+        body{
+            background-color: lightgray;
+        }
+        h2{
+            color: white;
+            text-align: center;
+        }
+        img{
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+        }
+    </style>
 </head>
 <body>
     <h2>Introduction to Front-End Technologies</h2>
