--- a/practical5.html
+++ b/practical5.html
@@ -20,6 +20,15 @@
     </style>
 </head>
 <body>
+    <img src="image/home image.png" usemap="#map1">
+    <map id="map1" name="map1">
+        <area href="index.html" shape="rect" coords="8,8,115,57"/>
+        <area href="Practical1.html" shape="rect" coords="115,7,357,55"/>
+        <area href="Practical2.html" shape="rect" coords="357,7,598,56"/>
+        <area href="Practical-3.html" shape="rect" coords="599,8,838,56"/>
+        <area href="practical4.html" shape="rect" coords="842,7,1081,52"/>
+        <area href="#" shape="rect" coords="1081,6,1352,56"/>
+    </map>
     <h2>Introduction to Front-End Technologies</h2>
     <img src="image/Practical-5(1).jpg" usemap="#map1">
     <map id="map1" name="map1">
