--- a/practical5.html
+++ b/practical5.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    <img src="image/home image.png" usemap="#map1">
+    <img src="image/all assignment.png" usemap="#map1">
     <map id="map1" name="map1">
         <area href="index.html" shape="rect" coords="8,8,115,57"/>
         <area href="Practical1.html" shape="rect" coords="115,7,357,55"/>
