--- a/Introhtml.html
+++ b/Introhtml.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>HTML Information</title>
+    <style>
+        body{
+            background-color: sandybrown;
+        }
+        p{
+            background-color: thistle;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <img src="image/HTML image.png" style="width: 40%; display: block; margin-left: auto; margin-right: auto;">
