--- a/practical5.html
+++ b/practical5.html
@@ -17,6 +17,10 @@
             margin-left: auto;
             margin-right: auto;
         }
+        p{
+            color: red;
+            text-align: center;
+        }
     </style>
 </head>
 <body>
