--- a/IntroOfCss.html
+++ b/IntroOfCss.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS Information</title>
 </head>
 <body>
+    <style>
+        body{
+            background-color: gray;
+        }
+        p{
+            background-color: maroon;
+            color: white;
+        }
+
+    </style>
     <Img src="image/css image.png" style="width: 50%; display: block; margin-left: auto; margin-right: auto;">
         <p>
             Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language like HTML. 
