--- a/IntroOfJs.html
+++ b/IntroOfJs.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>JavaScript Information</title>
+    <style>
+        body{
+            background-color: thistle;
+        }
+        p{
+            background-color: teal;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <IMG SRC="image/js image.png" style="width:40%; display: block; margin-left: auto; margin-right: auto;">
