--- a/IntroToBootstrap.html
+++ b/IntroToBootstrap.html
@@ -3,7 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>BoorStrap Information</title>
+    <style>
+        body{
+            background-color: lightcoral;
+        }
+        p{
+            background-color: orangered;
+            color: white;
+        }
+    </style>
 </head>
 <body>
     <img src="image/bootstrap 5.jpg" style="width: 40%; display: block; margin-left: auto; margin-right: auto;">
