--- a/Introhtml.html
+++ b/Introhtml.html
@@ -9,7 +9,7 @@
             background-color: sandybrown;
         }
         p{
-            background-color: thistle;
+            background-color:royalblue;
             color: white;
         }
     </style>
