--- a/practical4.html
+++ b/practical4.html
@@ -26,5 +26,7 @@
         4.Create a website having list of all practical and their individual practical page links
         <a href="practical4.html">Practical 4</a><br>
         <br>
+        5.create a website containing image hyperlinks which will open up a new web-page
+        <a href="practical5.html">Practical 5</a><br><br>
 </body>
 </html>
