--- a/Practical6.html
+++ b/Practical6.html
@@ -10,18 +10,26 @@
         background-color: gray;
     }
     .box{
-        border: 3px white;
-        width: 500px;
-        margin: 50px;
+        width:20%;
+        float: left;
+        margin: 20px 15px;
+        background-color: #fff;
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0 5px 5px rgba(0,0,0,0.15);
+    }
+    .box img{
+        width:100%;
+        border-radius: 8px;
+        margin-bottom: 10px;
+
+    }
+    .box h4{
+        margin: 0px 10px;
+        text-align: center;
     }
     .box p{
-        margin:10px;
         text-align: justify;
-    }
-    img{
-        width: 400px;
-        height:500px;
-
     }
 </style>
 <body>
