--- a/Practical6.html
+++ b/Practical6.html
@@ -33,11 +33,17 @@
     }
 </style>
 <body>
-    <h2>
+    <h1>
         PRACTICAL-6: CREATE FOLLOWING LAYOUT USING CSS LAYOUT PROPERTIES.
-    </h2>
+    </h1>
     <div class="container">
-        <div class="box" id="box1"></div>
+        <div class="box" id="box1">
+            <img src="image/HTML image.png">
+            <h4>Introduction to html</h4>
+            <p>HTML stands for Hyper Text Markup Language.HTML is a complete code package that allows the user to
+                create web pages.It include text and graphics.Using HTML,we can add links to the web pages.</p>
+
+        </div>
         <div class="box" id="box2"></div>
         <div class="box" id="box3"></div>
         <div class="box" id="box4"></div>
