--- a/Practical6.html
+++ b/Practical6.html
@@ -44,9 +44,31 @@
                 create web pages.It include text and graphics.Using HTML,we can add links to the web pages.</p>
 
         </div>
-        <div class="box" id="box2"></div>
-        <div class="box" id="box3"></div>
-        <div class="box" id="box4"></div>
+        <div class="box" id="box2">
+            <Img src="image/css image.png">
+                <h4>Introduction to CSS</h4>
+                <p>
+                    Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language like HTML. 
+                    CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+                </p>  
+        </div>
+        <div class="box" id="box3">
+            <IMG SRC="image/js image.png">
+                <h4>Introduction TO JavaScript</h4>
+                <p>
+                    JavaScript is a dynamic computer programming language. 
+                    It is lightweight and most commonly used as a part of web pages, whose implementations allow client-side script to interact with the user and make dynamic pages. 
+                    It is an interpreted programming language with object-oriented capabilities.
+                </p>
+        </div>
+        <div class="box" id="box4">
+            <img src="image/bootstrap 5.jpg">
+            <h4>Introduction to BootStrap</h4>
+            <p>
+                Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.
+                It contains CSS- and JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components.
+            </p>
+        </div>
     
     </div>
     
