add css element

--- a/Practical6.html
+++ b/Practical6.html
@@ -9,6 +9,9 @@
     body{
         background-color: gray;
     }
+    .container{
+        border: solid;
+    }
     .box{
         width:20%;
         float: left;
@@ -42,6 +45,7 @@
             <h4>Introduction to html</h4>
             <p>HTML stands for Hyper Text Markup Language.HTML is a complete code package that allows the user to
                 create web pages.It include text and graphics.Using HTML,we can add links to the web pages.</p>
+                <a href="Introhtml.html"></a>
 
         </div>
         <div class="box" id="box2">
