--- a/Practical6.html
+++ b/Practical6.html
@@ -37,8 +37,11 @@
 </style>
 <body>
     <h1>
-        PRACTICAL-6: CREATE FOLLOWING LAYOUT USING CSS LAYOUT PROPERTIES.
-    </h1>
+       <span style="color: white;">
+        PRACTICAL-6:CREATE FOLLOWING LAYOUT USING CSS PROPERTIES.
+    </span>
+    </h1> 
+        
     <div class="container">
         <div class="box" id="box1">
             <img src="image/HTML image.png">
