--- a/Practical6.html
+++ b/Practical6.html
@@ -41,8 +41,8 @@
     </h1> 
         
     <div class="container">
-        <div class="box" id="box1">
-            <img src="image/HTML image.png">
+        <div class="box">
+            <img src="image/HTML image.png"></br>
             <h4>Introduction to html</h4>
             <p>HTML stands for Hyper Text Markup Language.HTML is a complete code package that allows the user to
                 create web pages.It include text and graphics.Using HTML,we can add links to the web pages.</p>
@@ -50,7 +50,7 @@
 
         </div>
         <br>
-        <div class="box" id="box2">
+        <div class="box">
             <Img src="image/css image.png">
                 <h4>Introduction to CSS</h4>
                 <p>
@@ -59,7 +59,7 @@
                 </p>  
         </div>
         <br>
-        <div class="box" id="box3">
+        <div class="box">
             <IMG SRC="image/js image.png">
                 <h4>Introduction TO JavaScript</h4>
                 <p>
@@ -69,7 +69,7 @@
                 </p>
         </div>
         <br>
-        <div class="box" id="box4">
+        <div class="box">
             <img src="image/bootstrap 5.jpg">
             <h4>Introduction to BootStrap</h4>
             <p>
