--- a/Practical6.html
+++ b/Practical6.html
@@ -42,7 +42,7 @@
         
     <div class="container">
         <div class="box">
-            <img src="image/HTML image.png"></br>
+            <img src="image/HTML image.png">
             <h4>Introduction to html</h4>
             <p>HTML stands for Hyper Text Markup Language.HTML is a complete code package that allows the user to
                 create web pages.It include text and graphics.Using HTML,we can add links to the web pages.</p>
