--- a/Practical6.html
+++ b/Practical6.html
@@ -47,7 +47,10 @@
     </br>
             <h4>Introduction to html</h4>
             <p>HTML stands for Hyper Text Markup Language.HTML is a complete code package that allows the user to
-                create web pages.It include text and graphics.Using HTML,we can add links to the web pages.</p>
+                create web pages.It include text and graphics.Using HTML,we can add links to the web pages.
+            </p>
+            <a style="display: block; width: 100%; background-color: red; text-decoration: none;"
+            href="Introhtml.html"> READ MORE</a>
                 
 
         </div>
@@ -77,6 +80,7 @@
         </br>
         </br>
     </br>
+</br>
 </br>
 </br>
 </br>
