--- a/Practical6.html
+++ b/Practical6.html
@@ -42,12 +42,10 @@
         
     <div class="container">
         <div class="box">
-            <img src="image/HTML image.png">
-        </br>
-    </br>
+            <img src="image/html1.png">
             <h4>Introduction to html</h4>
-            <p>HTML stands for Hyper Text Markup Language.HTML is a complete code package that allows the user to
-                create web pages.It include text and graphics.Using HTML,we can add links to the web pages.
+            <p>HTML stands for Hyper Text Markup Language.It include text and graphics.
+                Using HTML,we can add links to the web pages.
             </p>
             <a style="display: block; width: 100%; background-color: red; text-decoration: none;"
             href="Introhtml.html"> READ MORE</a>
