--- a/Practical6.html
+++ b/Practical6.html
@@ -53,11 +53,12 @@
 
         </div>
         <div class="box">
-            <Img src="image/css image.png">
+            <Img src="image/css1.png">
                 <h4>Introduction to CSS</h4>
                 <p>
-                    Cascading Style Sheets is a style sheet language used for describing the presentation of a document written in a markup language like HTML. 
-                    CSS is a cornerstone technology of the World Wide Web, alongside HTML and JavaScript.
+                    Cascading Style Sheets is a style sheet language used for describing the presentation of a 
+                    document written in a markup language like HTML. 
+                   
                 </p>  
         </div>
         <div class="box">
