--- a/Practical6.html
+++ b/Practical6.html
@@ -59,7 +59,9 @@
                     Cascading Style Sheets is a style sheet language used for describing the presentation of a 
                     document written in a markup language like HTML. 
                    
-                </p>  
+                </p> 
+                <a style="display: block; width: 100%; background-color: blue; text-decoration: none;"
+                href="IntroOfCss.html">    Read More</a> 
         </div>
         <div class="box">
             <IMG SRC="image/js image.png">
