--- a/Practical6.html
+++ b/Practical6.html
@@ -56,7 +56,6 @@
             <Img src="image/css1.png">
             </br>
         </br>
-    </br>
                 <h4>Introduction to CSS</h4>
                 <p>
                     Cascading Style Sheets is a style sheet language used for describing the presentation of a 
@@ -67,16 +66,12 @@
                 href="IntroOfCss.html">    Read More</a> 
         </div>
         <div class="box">
-            <IMG SRC="image/js image.png">
-            </br>
-        </br>
-    </br>
-</br>
+            <IMG SRC="image/images.jpg">
                 <h4>Introduction TO JavaScript</h4>
                 <p>
                     JavaScript is a dynamic computer programming language. 
-                    It is lightweight and most commonly used as a part of web pages, whose implementations allow client-side script to interact with the user and make dynamic pages. 
-                    It is an interpreted programming language with object-oriented capabilities.
+                    It is lightweight and most commonly used as a part of web pages, 
+                    whose implementations allow client-side script to interact with the user and make dynamic pages. 
                 </p>
         </div>
         <div class="box">
