--- a/Practical6.html
+++ b/Practical6.html
@@ -59,7 +59,8 @@
                 <h4>Introduction to CSS</h4>
                 <p>
                     Cascading Style Sheets is a style sheet language used for describing the presentation of a 
-                    document written in a markup language like HTML. 
+                    document written in a markup language like HTML. CSS describes how HTML elements are to be displayed 
+                    on screen, paper, or in other media.
                    
                 </p> 
                 <a style="display: block; width: 100%; background-color:lightgreen; text-decoration: none;"
@@ -82,7 +83,7 @@
             <h4>Introduction to BootStrap</h4>
             <p>
                 Bootstrap is a free and open-source CSS framework directed at responsive, mobile-first front-end web development.
-                It contains CSS- and JavaScript-based design templates for typography, forms, buttons, navigation, and other interface components.
+                It contains CSS- and JavaScript-based design templates.
             </p>
             <a style="display: block; width: 100%; background-color: lightskyblue; text-decoration: none;"
             href="IntroToBootstrap.html">     Read More</a>
