--- a/Practical6.html
+++ b/Practical6.html
@@ -59,7 +59,7 @@
                 <h4>Introduction to CSS</h4>
                 <p>
                     Cascading Style Sheets is a style sheet language used for describing the presentation of a 
-                    document written in a markup language like HTML. CSS describes how HTML elements are to be displayed.
+                    document written in a markup language like HTML.
                    
                 </p> 
                 <a style="display: block; width: 100%; background-color:lightgreen; text-decoration: none;"
