--- a/Practical6.html
+++ b/Practical6.html
@@ -45,9 +45,9 @@
             <img src="image/html1.png">
             <h4>Introduction to html</h4>
             <p>HTML stands for Hyper Text Markup Language.It include text and graphics.
-                Using HTML,we can add links to the web pages.
+                Using HTML,we can add links to the web pages.HTML is the most commonly used language.
             </p>
-            <a style="display: block; width: 100%; background-color: red; text-decoration: none;"
+            <a style="display:inline-block; width: 100%; background-color: red; text-decoration: none;"
             href="Introhtml.html"> READ MORE</a>
                 
 
