--- a/Practical6.html
+++ b/Practical6.html
@@ -45,9 +45,9 @@
             <img src="image/html1.png">
             <h4>Introduction to html</h4>
             <p>HTML stands for Hyper Text Markup Language.It include text and graphics.
-                Using HTML,we can add links to the web pages.HTML is the most commonly used language.
+                Using HTML,we can add links to the web pages.It helps to create website.
             </p>
-            <a style="display:inline-block; width: 100%; background-color: red; text-decoration: none;"
+            <a style="display:block; width: 100%; background-color: red; text-decoration: none;"
             href="Introhtml.html"> READ MORE</a>
                 
 
@@ -59,7 +59,7 @@
                 <h4>Introduction to CSS</h4>
                 <p>
                     Cascading Style Sheets is a style sheet language used for describing the presentation of a 
-                    document written in a markup language like HTML.
+                    document written in a markup language like HTML.It provides styling to document.
                    
                 </p> 
                 <a style="display: block; width: 100%; background-color:lightgreen; text-decoration: none;"
