--- a/Practical6.html
+++ b/Practical6.html
@@ -45,7 +45,7 @@
             <img src="image/html1.png">
             <h4>Introduction to html</h4>
             <p>HTML stands for Hyper Text Markup Language.It include text and graphics.
-                Using HTML,we can add links to the web pages.It is used to create the websites. we can add images.
+                Using HTML,we can add links to the web pages.It is used to create and design web.
             </p>
             <a style="display:block; width: 100%; background-color: red; text-decoration: none;"
             href="Introhtml.html"> READ MORE</a>
