add image height

--- a/Practical6.html
+++ b/Practical6.html
@@ -48,8 +48,6 @@
             <h4>Introduction to HTML</h4>
             <p>HTML stands for Hyper Text Markup Language.It include text and graphics.
                 Using HTML,we can add links to the web pages.It is used to crete web.
-                <br>
-                <br>
             </p>
             <a style="display:block; width: 90%; background-color: red; text-decoration: none; text-align: center;
              border-radius: 10px; color: white; float: left; padding: 10px;"
@@ -58,7 +56,7 @@
 
         </div>
         <div class="box">
-            <Img src="image/css1.png">
+            <Img src="image/css1.png" height="192px">
             </br>
         </br>
                 <h4>Introduction to CSS</h4>
