remove image  height

--- a/Practical6.html
+++ b/Practical6.html
@@ -56,7 +56,7 @@
 
         </div>
         <div class="box">
-            <Img src="image/css1.png" height="192px">
+            <Img src="image/css1.png">
             </br>
         </br>
                 <h4>Introduction to CSS</h4>
