--- a/Practical6.html
+++ b/Practical6.html
@@ -42,7 +42,7 @@
         
     <div class="container">
         <div class="box">
-            <img src="image/html1.png">
+            <img src="image/html1.png" height="176px">
         </br>
     
             <h4>Introduction to HTML</h4>
