--- a/practical4.html
+++ b/practical4.html
@@ -28,5 +28,7 @@
         <br>
         5.create a website containing image hyperlinks which will open up a new web-page
         <a href="practical5.html">Practical 5</a><br><br>
+        6.Create Layout using CSS layout prperties.
+        <a href="Practical6.html">Practical 6</a><br><br>
 </body>
 </html>
