add header div tag

--- a/Practical7.html
+++ b/Practical7.html
@@ -5,7 +5,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical 7</title>
 </head>
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    #container{
+        border: solid;
+        width: 1200px;
+        margin: 0px auto;
+        padding: 15px;
+    }
+    #header{
+        background-color: dark gray;
+        height: 70px;
+        width: 100%;
+        border-radius: 15px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 40px;
+    }
+</style>
+
 <body>
+    <div id="container">
+        <div id="header">Header</div>
+    </div>
     
 </body>
 </html>
