add file practical 7

--- a/Practical7.html
+++ b/Practical7.html
@@ -3,17 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Practical 7</title>
+    <title>Document</title>
 </head>
-
 <body>
-    <div id="container">
-        <div id="header">Header</div>
-        <div id="banner">Banner</div>
-        <div id="content"></div>
-        <div id="footer">footer</div>
-    </div>
-    <br>
     
 </body>
 </html>
