--- a/Practical7.html
+++ b/Practical7.html
@@ -6,6 +6,10 @@
     <title>Practical 7 Layout Design</title>
 </head>
 <body>
-    
+    <div id="container">
+        <div id="header">header</div>
+        <div id="Banner">Banner</div>
+        <div id="footer">footer</div>
+    </div>
 </body>
 </html>
