--- a/Practical7.html
+++ b/Practical7.html
@@ -5,6 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical 7 Layout Design</title>
 </head>
+<style>
+    *{
+        margin: 0;
+        padding: 0;
+    }
+    #container{
+        border: solid;
+        width: 1200px;
+        margin: 0px auto;
+        padding: 15px;
+    }
+</style>
 <body>
     <div id="container">
         <div id="header">header</div>
