--- a/Practical7.html
+++ b/Practical7.html
@@ -16,6 +16,16 @@
         margin: 0px auto;
         padding: 15px;
     }
+    #header{
+        background-color: gray;
+        height: 70px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 40px;
+    }
 </style>
 <body>
     <div id="container">
