add styling to banner

--- a/Practical7.html
+++ b/Practical7.html
@@ -26,10 +26,23 @@
         color: white;
         font-size: 40px;
     }
+    #Banner{
+        background-color: skyblue;
+        height: 100%;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 40px;
+    }
+
 </style>
 <body>
     <div id="container">
         <div id="header">header</div>
+        <br>
+        <br>
         <div id="Banner">Banner</div>
         <div id="footer">footer</div>
     </div>
