--- a/Practical7.html
+++ b/Practical7.html
@@ -28,7 +28,7 @@
     }
     #Banner{
         background-color: skyblue;
-        height: 100%;
+        height: 500px;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -41,7 +41,6 @@
 <body>
     <div id="container">
         <div id="header">header</div>
-        <br>
         <br>
         <div id="Banner">Banner</div>
         <div id="footer">footer</div>
