add footer  styling

--- a/Practical7.html
+++ b/Practical7.html
@@ -36,6 +36,16 @@
         color: white;
         font-size: 40px;
     }
+    #footer{
+        background-color: violet;
+        height: 70px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        font-size: 40px;
+    }
 
 </style>
 <body>
@@ -43,6 +53,7 @@
         <div id="header">header</div>
         <br>
         <div id="Banner">Banner</div>
+        <h1 style="text-align: center;">Section-1 </h1>
         <div id="footer">footer</div>
     </div>
 </body>
