--- a/Practical7.html
+++ b/Practical7.html
@@ -46,6 +46,42 @@
         color: white;
         font-size: 40px;
     }
+    #circle1{
+        background-color: darkgoldenrod;
+        height: 100px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
+    #circle2{
+        background-color: darkgoldenrod;
+        height: 100px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
+    #circle3{
+        background-color: darkgoldenrod;
+        height: 100px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
+    #circle4{
+        background-color: darkgoldenrod;
+        height: 100px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        border-radius: 50%;
+    }
 
 </style>
 <body>
@@ -54,6 +90,10 @@
         <br>
         <div id="Banner">Banner</div>
         <h1 style="text-align: center;">Section-1 </h1>
+        <div id="circle1"></div>
+        <div id="circle2"></div>
+        <div id="circle3"></div>
+        <div id="circle4"></div>
         <div id="footer">footer</div>
     </div>
 </body>
