--- a/Practical7.html
+++ b/Practical7.html
@@ -48,30 +48,33 @@
     }
     #circle1{
         background-color: darkgoldenrod;
-        height: 100px;
+        height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
+        float: left;
     }
     #circle2{
         background-color: darkgoldenrod;
-        height: 100px;
+        height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
+        float: left;
     }
     #circle3{
         background-color: darkgoldenrod;
-        height: 100px;
+        height: 100%;
         width: 100%;
         display: flex;
         justify-content: center;
         align-items: center;
         border-radius: 50%;
+        float: left;
     }
     #circle4{
         background-color: darkgoldenrod;
