--- a/Practical7.html
+++ b/Practical7.html
@@ -36,6 +36,7 @@
         align-items: center;
         color: white;
         font-size: 40px;
+        margin-bottom: 15px;
     }
     #footer{
         background-color: violet;
@@ -48,7 +49,7 @@
         font-size: 40px;
     }
     #content1{
-        border: solid;
+        border: white;
     }
     #content1::after{
         content: '';
@@ -69,7 +70,7 @@
 }
 #article1{
     width: 100%;
-    height: 80px;
+    height: 120px;
     background-color: brown;
     margin-bottom: 15px;
     justify-content: center;
@@ -79,7 +80,7 @@
 }
 #article2{
     width: 100%;
-    height: 80px;
+    height: 120px;
     background-color: brown;
     margin-bottom: 15px;
     justify-content: center;
@@ -89,7 +90,7 @@
 }
 #article3{
     width: 100%;
-    height: 80px;
+    height: 120px;
     background-color: brown;
     margin-bottom: 15px;
     justify-content: center;
