--- a/Practical7.html
+++ b/Practical7.html
@@ -29,7 +29,7 @@
     }
     #Banner{
         background-color: skyblue;
-        height: 500px;
+        height: 600px;
         width: 100%;
         display: flex;
         justify-content: center;
@@ -50,6 +50,7 @@
     }
     #content1{
         border: white;
+        margin-bottom: 15px;
     }
     #content1::after{
         content: '';
@@ -70,7 +71,7 @@
 }
 #article1{
     width: 100%;
-    height: 150px;
+    height: 160px;
     background-color: brown;
     margin-bottom: 15px;
     justify-content: center;
@@ -80,7 +81,7 @@
 }
 #article2{
     width: 100%;
-    height: 150px;
+    height: 160px;
     background-color: brown;
     margin-bottom: 15px;
     justify-content: center;
@@ -90,7 +91,7 @@
 }
 #article3{
     width: 100%;
-    height: 150px;
+    height: 160px;
     background-color: brown;
     margin-bottom: 15px;
     justify-content: center;
