--- a/Practical7.html
+++ b/Practical7.html
@@ -99,6 +99,15 @@
     color: white;
     font-size: 40px;
 }
+.box{
+        width:20%;
+        float: left;
+        margin: 20px 15px;
+        background-color:red;
+        padding: 15px;
+        border-radius: 8px;
+        box-shadow: 0 5px 5px rgba(0,0,0,0.15);
+    }
 </style>
 <body>
     <div id="container">
@@ -111,6 +120,12 @@
                 <div id="article2">Article-2</div>
                 <div id="article3">Article-3</div>
             </div>
+        </div>
+        <div class="container">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
         </div>
 
 
