--- a/Practical7.html
+++ b/Practical7.html
@@ -105,7 +105,7 @@
         margin: 20px 15px;
         background-color:red;
         padding: 15px;
-        border-radius: 8px;
+        height:300px;
         box-shadow: 0 5px 5px rgba(0,0,0,0.15);
     }
 </style>
