--- a/Practical7.html
+++ b/Practical7.html
@@ -108,11 +108,31 @@
         height:300px;
         box-shadow: 0 5px 5px rgba(0,0,0,0.15);
     }
+    .circle{
+        background-color: darkgoldenrod;
+        width: 200px;
+        height: 200px;
+        float: left;
+        margin-top: 30px;
+        margin-left: 70px;
+        border-radius: 100px;
+    }
+    .contaier{
+        margin-bottom: 15px;
+    }
 </style>
 <body>
     <div id="container">
         <div id="header">header</div>
         <div id="Banner">Banner</div>
+        <h1 style="text-align: center;">Section-1 </h1>
+        <div class="container">
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+            <div class="circle"></div>
+        </div>
+        <h1 style="text-align: center;">Section-2 </h1>
         <div id="content1">
             <div id="leftside"></div>
             <div id="rightside">
@@ -121,6 +141,7 @@
                 <div id="article3">Article-3</div>
             </div>
         </div>
+        <h1 style="text-align: center;">Section-3 </h1>
         <div class="container">
             <div class="box"></div>
             <div class="box"></div>
@@ -129,7 +150,7 @@
         </div>
 
 
-        <h1 style="text-align: center;">Section-1 </h1>
+        <h1 style="text-align: center;">Section-4 </h1>
         
         <div id="footer">footer</div>
     </div>
