--- a/Practical7.html
+++ b/Practical7.html
@@ -47,6 +47,7 @@
         align-items: center;
         color: white;
         font-size: 40px;
+        margin-top: 15px;
     }
     #content1{
         border: white;
@@ -117,9 +118,7 @@
         margin-left: 70px;
         border-radius: 100px;
     }
-    .contaier{
-        margin-bottom: 15px;
-    }
+    
 </style>
 <body>
     <div id="container">
@@ -132,7 +131,7 @@
             <div class="circle"></div>
             <div class="circle"></div>
         </div>
-        <h1 style="text-align: center;">Section-2 </h1>
+        
         <div id="content1">
             <div id="leftside"></div>
             <div id="rightside">
