--- a/Practical7.html
+++ b/Practical7.html
@@ -117,6 +117,7 @@
         margin-top: 30px;
         margin-left: 70px;
         border-radius: 100px;
+        margin-bottom: 15px;
     }
     
 </style>
