--- a/Practical7.html
+++ b/Practical7.html
@@ -132,6 +132,7 @@
             <div class="circle"></div>
             <div class="circle"></div>
         </div>
+        <h1 style="text-align: center;">Section-2 </h1>
         
         <div id="content1">
             <div id="leftside"></div>
