--- a/Practical7.html
+++ b/Practical7.html
@@ -119,6 +119,10 @@
         border-radius: 100px;
         margin-bottom: 15px;
     }
+    .container{
+        margin-top: 15px;
+        margin-bottom: 15px;
+    }
     
 </style>
 <body>
