--- a/Practical7.html
+++ b/Practical7.html
@@ -11,7 +11,7 @@
         padding: 0;
     }
     #container{
-        border: solid;
+        border: light gainsboro 5px;
         width: 1200px;
         margin: 0px auto;
         padding: 15px;
@@ -76,6 +76,7 @@
     height: 162px;
     background-color: brown;
     margin-bottom: 15px;
+    display: flex;
     justify-content: center;
     align-items: center;
     color: white;
@@ -86,6 +87,7 @@
     height: 162px;
     background-color: brown;
     margin-bottom: 15px;
+    display: flex;
     justify-content: center;
     align-items: center;
     color: white;
@@ -96,6 +98,7 @@
     height: 162px;
     background-color: brown;
     margin-bottom: 15px;
+    display: flex;
     justify-content: center;
     align-items: center;
     color: white;
