--- a/Practical7.html
+++ b/Practical7.html
@@ -11,7 +11,7 @@
         padding: 0;
     }
     #container{
-        border: solid;
+        border: solid gray 5px;
         width: 1200px;
         margin: 0px auto;
         padding: 15px;
