add main content

--- a/Practical7.html
+++ b/Practical7.html
@@ -64,6 +64,11 @@
         background-color: gray;
         height: 515px;
         float: left;
+        display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
 
     }
     #rightside{
@@ -152,7 +157,9 @@
         <h1 style="text-align: center;">Section-2 </h1>
         
         <div id="content1">
-            <div id="leftside"></div>
+            <div id="leftside">
+                Main Content
+            </div>
             <div id="rightside">
                 <div id="article1">Article-1</div>
                 <div id="article2">Article-2</div>
