--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     <a href="practical5.html">Practical 5</a><br><br>
     6.Create Layout using CSS layout prperties.
     <a href="Practical6.html">Practical 6</a><br><br>
+    7.Create a web page layout using div tags.
+    <a href="Practical7.html">Practical 7</a><br><br>
     
 </body>
 </html>
