--- a/Practical8.html
+++ b/Practical8.html
@@ -5,7 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practical-8</title>
 </head>
+<style>
+     ul{
+            margin-top: 0;
+            list-style-type: none;
+            margin: auto;
+            margin-bottom: 35px;
+            padding: 10px;
+            overflow: hidden;
+            background-color: gray;
+            width: 100%;
+            height: 45px;
+            display: flex;
+            justify-content: space-evenly;
+            position: fixed;
+            top: 0;
+        }
+        ul li{
+            display: inline-block;
+        }
+        ul li a{
+            display: block;
+            color: white;
+            font-weight: bold;
+            width: 135px;
+            padding: 10px 35px;
+            text-decoration: none;
+            text-align: center;
+            font-size: 20px;
+        }
+        ul li a:hover{
+            background-color: white;
+            color: black;
+        }
+</style>
 <body>
+    <a name="top"></a>
+    <header>
+        <ul>
+            <li><a href="#part1">HOME</a></li>
+            <li><a href="#part2">ABOUT US</a></li>
+            <li><a href="#part3">TEAM</a></li>
+            <li><a href="#part4">TECHNOLOGIES</a></li>
+            <li><a href="#part5">CONTACT</a></li>
+        </ul>
+    </header>
     
 </body>
 </html>
