--- a/Practical8.html
+++ b/Practical8.html
@@ -6,6 +6,10 @@
     <title>Practical-8</title>
 </head>
 <style>
+    *{
+        padding: 0;
+        margin: 0;
+    }
      ul{
             margin-top: 0;
             list-style-type: none;
