add background image

--- a/Practical8.html
+++ b/Practical8.html
@@ -42,6 +42,16 @@
             background-color: white;
             color: black;
         }
+        h1{
+            clear: both;
+        }
+        #box1{
+            margin-top: 100px;
+            margin-bottom: 200px;
+            height: 100vh;
+            background-image: url("image/image11.jpg");
+            background-repeat: no-repeat;
+        }
 </style>
 <body>
     <a name="top"></a>
@@ -54,6 +64,10 @@
             <li><a href="#part5">CONTACT</a></li>
         </ul>
     </header>
+    <div id="box1">
+        <a name="part1"></a>
+        <h1><b>PRACTICAL - 8</b></h1>
+    </div>
     
 </body>
 </html>
