--- a/Practical8.html
+++ b/Practical8.html
@@ -49,7 +49,7 @@
             margin-top: 100px;
             margin-bottom: 200px;
             height: 100vh;
-            background-image: url("image/image11.jpg");
+            background-image: url("image/image\ 11.jpg");
             background-repeat: no-repeat;
         }
 </style>
