--- a/Practical8.html
+++ b/Practical8.html
@@ -49,7 +49,7 @@
             margin-top: 100px;
             margin-bottom: 200px;
             height: 100vh;
-            background-image: url("image/image\ 11.jpg");
+            background-image: url("image/HTML\ image.png");
             background-repeat: no-repeat;
         }
 </style>
@@ -67,6 +67,7 @@
     <div id="box1">
         <a name="part1"></a>
         <h1><b>PRACTICAL - 8</b></h1>
+        
     </div>
     
 </body>
