--- a/Practical8.html
+++ b/Practical8.html
@@ -44,12 +44,13 @@
         }
         h1{
             clear: both;
+            color: white;
         }
         #box1{
             margin-top: 100px;
             margin-bottom: 200px;
             height: 100vh;
-            background-image: url("image/HTML\ image.png");
+            background-image: url("image/image\ 11.jpg");
             background-repeat: no-repeat;
         }
 </style>
