--- a/Practical8.html
+++ b/Practical8.html
@@ -49,8 +49,8 @@
         #box1{
             margin-top: 100px;
             margin-bottom: 200px;
-            height: 100vh;
-            background-image: url("image/image\ 11.jpg");
+            height: 800px;
+            background-image: url("image/laptop\ image.jpg");
             background-repeat: no-repeat;
         }
 </style>
