--- a/Practical8.html
+++ b/Practical8.html
@@ -49,7 +49,7 @@
         #box1{
             margin-top: 100px;
             margin-bottom: 200px;
-            height: 800px;
+            height: 100vh;
             background-image: url("image/laptop\ image.jpg");
             background-repeat: no-repeat;
         }
