--- a/Practical8.html
+++ b/Practical8.html
@@ -63,6 +63,11 @@
         border-radius: 100px;
         margin-bottom: 15px;
     }
+    .circle img{ 
+            height: 277px;
+            border-radius: 50%; 
+
+        }
        
 </style>
 <body>
