--- a/Practical8.html
+++ b/Practical8.html
@@ -61,6 +61,7 @@
         margin-left: 70px;
         border-radius: 100px;
         margin-bottom: 15px;
+        margin-right: 15px;
     }
     .circle img{ 
             height: 277px;
