--- a/Practical8.html
+++ b/Practical8.html
@@ -42,6 +42,9 @@
             background-color: white;
             color: black;
         }
+        h1{
+            clear: both;
+        }
        
         #box1{
             margin-top: 100px;
