--- a/Practical8.html
+++ b/Practical8.html
@@ -69,6 +69,65 @@
             border-radius: 50%; 
 
         }
+        #box3{
+        border: white;
+        margin-bottom: 15px;
+        margin-top: 15px;
+    }
+    #content1::after{
+        content: '';
+        display: block;
+        clear: both;
+    }#leftside{
+        width:49%;
+        background-color: gray;
+        height: 515px;
+        float: left;
+        display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+
+    }
+    #rightside{
+        width: 49%;
+        height: 515px;
+        float: right;
+}
+#Project-1{
+    width: 100%;
+    height: 162px;
+    background-color: brown;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+}
+#Project-2{
+    width: 100%;
+    height: 162px;
+    background-color: brown;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+}
+#Project-3{
+    width: 100%;
+    height: 162px;
+    background-color: brown;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+}
        
 </style>
 <body>
@@ -101,6 +160,18 @@
             </div>
             <div class="circle">
                 <img src="image/9.png">
+            </div>
+        </div>
+        <div id="box3">
+            <a name="part2"></a>
+            <h1><b>About Us</b></h1>
+            <div id="leftside">
+                main content
+            </div>
+            <div id="rightside">
+                <div id="article1"><h3>Project-1</h3></div>
+                <div id="article2"><h3>Project-2</h3></div>
+                <div id="article3"><h3>Project-3</h3></div>
             </div>
         </div>
     
