--- a/Practical8.html
+++ b/Practical8.html
@@ -74,11 +74,61 @@
         margin-bottom: 15px;
         margin-top: 15px;
     }
-    #content1::after{
+    #box3::after{
         content: '';
         display: block;
         clear: both;
     }
+    #leftside{
+        width:49%;
+        background-color: gray;
+        height: 515px;
+        float: left;
+        display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+
+    }
+    #rightside{
+        width: 49%;
+        height: 515px;
+        float: right;
+}
+#Project-1{
+    width: 100%;
+    height: 162px;
+    background-color: brown;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+}
+#Project-2{
+    width: 100%;
+    height: 162px;
+    background-color: brown;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+}
+#Project-3{
+    width: 100%;
+    height: 162px;
+    background-color: brown;
+    margin-bottom: 15px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    font-size: 40px;
+}
        
 </style>
 <body>
