--- a/Practical8.html
+++ b/Practical8.html
@@ -96,7 +96,7 @@
         height: 515px;
         float: right;
 }
-#Project-1{
+#article1{
     width: 100%;
     height: 162px;
     background-color: brown;
@@ -107,7 +107,7 @@
     color: white;
     font-size: 40px;
 }
-#Project-2{
+#article2{
     width: 100%;
     height: 162px;
     background-color: brown;
@@ -118,7 +118,7 @@
     color: white;
     font-size: 40px;
 }
-#Project-3{
+#article3{
     width: 100%;
     height: 162px;
     background-color: brown;
