--- a/Practical8.html
+++ b/Practical8.html
@@ -84,13 +84,16 @@
         background-color: gray;
         height: 515px;
         float: left;
-        display: flex;
-    justify-content: center;
-    align-items: center;
+       text-align: justify;
     color: white;
-    font-size: 40px;
+    font-size: 20px;
 
     }
+    #left-side h3{
+            text-align: left;
+            margin:0;
+            margin-bottom: 10px;
+        }
     #rightside{
         width: 49%;
         height: 515px;
@@ -99,33 +102,24 @@
 #article1{
     width: 100%;
     height: 162px;
-    background-color: brown;
+    background-image: url("image/p1.jpg");
     margin-bottom: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: white;
     font-size: 40px;
 }
 #article2{
     width: 100%;
     height: 162px;
-    background-color: brown;
+    background-image: url("image/p2.jpeg");
     margin-bottom: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: white;
     font-size: 40px;
 }
 #article3{
     width: 100%;
     height: 162px;
-    background-color: brown;
+    background-image: url("image/p3.jpg");
     margin-bottom: 15px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
     color: white;
     font-size: 40px;
 }
@@ -167,7 +161,17 @@
             <a name="part2"></a>
             <h1><b>About Us</b></h1>
             <div id="leftside">
-                main content
+                <h3>About Projects</h3>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero nesciunt molestiae dicta. Beatae magni provident ducimus 
+                quam nesciunt dignissimos? Atque perspiciatis consectetur alias labore incidunt libero totam corrupti, dicta laudantium 
+                assumenda illum iusto corporis! Sit numquam provident eveniet optio dolor deserunt sunt in repudiandae ratione ab nulla, 
+                aliquid, ipsum, aliquam veritatis voluptas! Dicta cumque voluptatum sunt beatae eligendi explicabo debitis temporibus earum 
+                distinctio placeat exercitationem sequi, fuga esse veniam nesciunt cum est magnam dolores provident at dolore tempore 
+                blanditiis quo. Eos qui quod labore facere reiciendis rerum at itaque aspernatur voluptas exercitationem, beatae dolorem 
+                explicabo obcaecati, odio alias quam ex.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi, porro nobis delectus eligendi magni magnam veritatis 
+                quaerat ipsa nostrum, dolor aperiam nemo voluptas odio a ex laboriosam. Alias ullam, quibusdam, amet at saepe corporis 
+                optio animi nostrum ex eaque illum veniam.
             </div>
             <div id="rightside">
                 <div id="article1"><h3>Project-1</h3></div>
