--- a/Practical8.html
+++ b/Practical8.html
@@ -145,6 +145,9 @@
     .box p{
         text-align: justify;
     }
+    .box a:hover{
+            background-color: blue;
+        }
        
 </style>
 <body>
