--- a/Practical8.html
+++ b/Practical8.html
@@ -151,6 +151,7 @@
             background-color: violet;
             padding: 20px;
             text-align: center;
+            margin-bottom: 20px;
         }
         footer a:hover{
             background-color: beige;
